front-end finalizado
Termino do fornt-end com a importação e imagens e fonte

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="banner">
             <h1>Dog dodói para seu dog não ficar dodói</h1>
             <a href="">Veja nossos serviços</a>
         </section>
@@ -25,13 +25,13 @@
         <section>
             <h2>Nossos Serviços</h2>
             <div>
-                <img src="" alt="Imagem sobre consulta">
+                <img src="static/Img/consulta.png" alt="Imagem sobre consulta">
                 <h3>Consulta</h3>
                 <p>Consulta veterinária para seu pet</p>
             </div>
 
             <div>
-                <img src="" alt="Cirurgias">
+                <img src="static/Img/veterinario.png" alt="Cirurgias">
                 <h3>Cirurgias</h3>
                 <p>Realizamos diversas cirurgias</p>
             </div>
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <img src="" alt="Logo Dog Dodói">
+        <img src="static/Img/logo.png" alt="Logo Dog Dodói">
         <p>Todos os direitos reservados - 2025</p>
     </footer>
 </body>
