--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-BR" dir="ltr">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Dodói</title>
-    <link rel="stylesheet" href="static/CSS/style.css">
+  <meta charset="UTF-8">
+  <title>Clínica Veterinária</title>
+  <link rel="stylesheet" href="static/CSS/style.css">
 </head>
 <body>
-    <header>
-        <img src="static/Img/logo.png" alt="Logo do site">
-        <nav>
-            <a href="Sobre">Sobre</a>
-            <a href="Servico">Serviço</a>
-            <a href="Contato">Contato</a>
-        </nav>
-    </header>
 
-    <main>
-        <section class="banner">
-            <h1>Dog dodói para seu dog não ficar dodói</h1>
-            <a href="">Veja nossos serviços</a>
-        </section>
-        
-        <section>
-            <h2>Nossos Serviços</h2>
-            <div>
-                <img src="static/Img/consulta.png" alt="Imagem sobre consulta">
-                <h3>Consulta</h3>
-                <p>Consulta veterinária para seu pet</p>
-            </div>
+  <header>
+    <img src="static/Img/logo.png" alt="Logo da clínica">
+    <nav>
+      <a href="contato">Início</a>
+      <a href="contato">Serviços</a>
+      <a href="contato">Contato</a>
+    </nav>
+  </header>
 
-            <div>
-                <img src="static/Img/veterinario.png" alt="Cirurgias">
-                <h3>Cirurgias</h3>
-                <p>Realizamos diversas cirurgias</p>
-            </div>
-        </section>
-    </main>
+  <section class="banner">
+    <h1>Bem-vindo à nossa Clínica</h1>
+    <a href="">Agende sua consulta</a>
+  </section>
 
-    <footer>
-        <img src="static/Img/logo.png" alt="Logo Dog Dodói">
-        <p>Todos os direitos reservados - 2025</p>
-    </footer>
+  <section class="servicos">
+    <h2>Nossos Serviços</h2>
+    <div class="caixas-servicos">
+      <div class="servico">
+        <h3>Consultas</h3>
+        <p>Atendimento clínico completo para seu pet com amor e cuidado.</p>
+      </div>
+      <div class="servico">
+        <h3>Cirurgias</h3>
+        <p>Procedimentos cirúrgicos seguros e profissionais especializados.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Clínica Veterinária - Todos os direitos reservados.</p>
+  </footer>
+
 </body>
 </html>
